--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "radium": "^0.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "1.1.5",
-    "styled-components": "^5.1.1"
+    "react-scripts": "1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
