--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "prop-types": "^15.7.2",
     "radium": "^0.26.0",
     "raf": "3.4.0",
     "react": "^16.13.1",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
